--- a/style-property.css
+++ b/style-property.css
@@ -70,6 +70,7 @@ p {
 
 /* set up the body */
 body {
+	max-width: 1440px;
 	font-family: var(--ff-sans-normal);
 	font-size: var(--fs-400);
 	color: hsl(var(--clr-rich-black));
@@ -224,7 +225,7 @@ h8 {
 
 .subheader__container {
 	visibility: hidden;
-	margin: 0;
+	margin: 0 auto;
 	padding: 0;
 }
 
@@ -240,7 +241,7 @@ section {
 .main__nav-container {
 	margin-top: -3rem;
 	align-items: center;
-	padding: 2em;
+	padding: 2em 4em;
 }
 
 .nav {
@@ -535,6 +536,8 @@ h2 {
 		justify-content: space-between;
 		align-items: center;
 		padding: 0.625rem 0;
+		padding-left: 1.5em;
+
 		visibility: visible;
 	}
 
@@ -551,7 +554,7 @@ h2 {
 
 	.social-container {
 		justify-content: flex-end;
-		padding-right: 2em;
+		padding-right: 4em;
 	}
 
 	.main__nav-container {
@@ -601,6 +604,11 @@ h2 {
 		flex-wrap: wrap;
 	}
 
+	.property-description h6 {
+		font-weight: 700;
+		color: var(--clr-text-gray);
+	}
+
 	.details__p {
 		flex-direction: row;
 		gap: 3em;
@@ -621,7 +629,7 @@ h2 {
 		flex-direction: row;
 		justify-content: space-between;
 		align-items: center;
-		max-width: 680px;
+		/* max-width: 680px; */
 	}
 
 	.highlight {
@@ -629,6 +637,12 @@ h2 {
 		justify-content: center;
 		align-items: center;
 		text-align: center;
+		border: 0;
+		margin: 0;
+		padding: 0;
+	}
+
+	.highlight img {
 		border: 0;
 		margin: 0;
 		padding: 0;
@@ -677,37 +691,65 @@ h2 {
 
 @media (min-width: 1200px) {
 	.property__wrapper {
-		flex-direction: row;
-		align-items: flex-start;
+		/* flex-direction: row; */
+		/* align-items: flex-start; */
+		display: grid;
+		grid-template-columns: repeat(2, 1fr, 1fr);
+		grid-template-rows: auto;
+		grid-template-areas:
+			"img aside"
+			"detail btn";
+		align-items: start;
+		column-gap: 3em;
+		row-gap: 1em;
 	}
 
 	.property__wrapper img {
-		width: 40%;
-		margin-right: 2cqb;
-		margin-bottom: 2em;
+		/* width: 75%; */
+		/* margin-right: 3em; */
+		/* margin-bottom: 2em; */
+		grid-area: img;
 	}
 
 	.property-description {
-		width: 25%;
 		flex-direction: column;
-		align-items: flex-start;
-		margin-right: 2em;
+		grid-area: detail;
 	}
 
-	.property-description .btn__schedule {
-		margin: 2em auto;
+	.property-description h8 {
+		line-height: 1.5;
+		width: 80%;
+	}
+
+	.property-wrapper .btn__schedule {
+		grid-area: btn;
+		justify-items: center;
 	}
 
 	.highlight__detail {
-		width: 100%;
 		flex-direction: column;
 		margin-top: 0;
+		grid-area: aside;
 	}
 
 	.highlight {
-		margin-bottom: 24px;
-		padding-bottom: 24px;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		text-align: center;
+		margin-bottom: 1.5em;
+		padding-bottom: 1.5em;
 		border-bottom: 1px solid var(--clr-rich-gray);
+	}
+
+	.highlight img {
+		border: 0;
+		margin: 0;
+		padding: 0;
+	}
+
+	.highlight span {
+		margin-bottom: 0;
 	}
 
 	.highlight:last-child {
@@ -716,19 +758,23 @@ h2 {
 		margin-bottom: 0;
 	}
 
+	.details__container {
+		justify-content: flex-start;
+	}
+
 	.details__p {
-		flex-direction: column;
+		flex-direction: row;
+		gap: 3em;
 	}
 
 	.details-one {
 		width: 100%;
+		max-width: 400px;
 	}
 
 	.details-two {
 		width: 100%;
-	}
-
-	.best__deal button:first-child {
-		background-color: var(--clr-light);
+		margin-top: 0;
+		max-width: 400px;
 	}
 }
