--- a/style.css
+++ b/style.css
@@ -390,7 +390,7 @@ h1 {
 }
 
 .feature__image {
-	margin-right: 2em;
+	margin-right: 1em;
 	margin-bottom: 4rem;
 }
 
@@ -464,6 +464,11 @@ h1 {
 	right: 30px;
 	height: 30px;
 	width: 30px;
+}
+
+.faq-toggle,
+.faq-title:hover {
+	color: var(--clr-light);
 }
 
 .faq-toggle:focus {
