--- a/style.css
+++ b/style.css
@@ -180,12 +180,13 @@ h8 {
 	cursor: pointer;
 	width: 12rem;
 	height: 2.6rem;
-
 	padding: 0.5em 1.5rem 0.5em 3rem;
 	border-radius: 2rem;
 	border: none;
 	background: var(--clr-rich-black);
-	color: white;
+	color: var(--clr-white);
+	transition: all 0.3s;
+
 	/* margin-left: 1em; */
 	font-size: var(--fs-200);
 	position: relative;
@@ -302,7 +303,7 @@ a:hover {
 	padding: 0em;
 	border-radius: 50%;
 	background: var(--clr-light);
-	color: white;
+	color: var(--clr-white);
 	transition: opacity 250ms ease;
 	position: absolute;
 	right: 2em;
@@ -342,16 +343,141 @@ a:hover {
 }
 
 /* Hero section */
-.hero {
+.carousel {
+	position: relative;
+	width: 100%;
+	overflow: hidden;
+}
+
+.carousel-inner {
+	display: flex;
+	transition: transform 0.5s ease-in-out;
+}
+
+.carousel-item {
+	flex: 0 0 100%;
+	max-width: 100%;
+}
+
+.carousel-item img {
+	width: 100%;
+	height: auto;
+}
+
+.carousel-control-prev,
+.carousel-control-next {
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+	background: transparent;
+	border: none;
+	cursor: pointer;
+	padding: 1rem;
+}
+
+.carousel-control-next {
+	right: 1em;
+}
+
+.carousel-control-next img {
+	width: 2em;
+	transform: translateX(10%);
+}
+
+.carousel-control-next:hover {
+	background-color: rgb(255, 165, 0);
+	border-radius: 50%;
+}
+
+.carousel-control-prev {
+	left: 1em;
+}
+
+.carousel-control-prev img {
+	width: 2em;
+	transform: translateX(-10%);
+}
+
+.carousel-control-prev:hover {
+	background-color: orange;
+	border-radius: 50%;
+}
+
+.carousel-indicators {
+	position: absolute;
+	bottom: 1rem;
+	left: 50%;
+	transform: translateX(-50%);
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.carousel-indicators button {
+	width: 100%;
+	height: 10px;
+	border: 0;
+	border-radius: 50%;
+	background-color: white;
+	margin: 1rem 0.5rem;
+	cursor: pointer;
+}
+
+.carousel-indicators button.active {
+	background-color: orange;
+}
+
+.carousel-item {
+	position: relative;
+}
+
+.carousel-item-overlay {
+	font-family: sans-serif;
+	position: absolute;
+	top: 10%;
+	left: 20%;
+	color: white;
+	text-align: left;
+	padding-right: 20%;
+}
+
+.carousel-item-overlay span {
+	background-color: #fff;
+	color: black;
+	font-size: 1em;
+	font-weight: 500;
+	text-transform: capitalize;
+	padding: 0.375rem 0.938rem;
+	display: inline-block;
+	margin-bottom: 0.75em;
+	margin-top: 1em;
+}
+
+.carousel-item-overlay span em {
+	font-style: normal;
+	color: orange;
+}
+
+.carousel-item-overlay h1 {
+	font-size: 40pt;
+	font-weight: 700;
+	text-transform: uppercase;
+	color: white;
+	line-height: 62px;
+	width: 70%;
+	margin-bottom: 0px;
+	padding: 0.375rem 0;
+}
+/* .hero {
 	background-image: url(images/banner-01.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center center;
 	padding: 13.75rem 20% 20rem 20%;
-}
+} */
 
-.hero span {
-	background-color: #fff;
+/* .hero span {
+	background-color: var(--clr-white);
 	color: var(--clr-rich-black);
 	font-size: 1em;
 	font-weight: 500;
@@ -359,22 +485,21 @@ a:hover {
 	padding: 0.375rem 0.938rem;
 	display: inline-block;
 	margin-bottom: 30px;
-}
+} */
 
-.hero span em {
+/* .hero span em {
 	font-style: normal;
 	color: var(--clr-light);
-}
+} */
 
-h1 {
+/* h1 {
 	font-size: var(--fs-800);
 	font-weight: 700;
 	text-transform: uppercase;
-	color: #fff;
+	color: var(--clr-white);
 	line-height: 62px;
-	/* width: 70%; */
 	margin-bottom: 0px;
-}
+} */
 
 /* Featured section */
 .feature__wrapper {
@@ -391,7 +516,7 @@ h1 {
 }
 
 .feature__icon {
-	color: #fff;
+	color: var(--clr-white);
 	background-color: var(--clr-light);
 	width: 6rem;
 	height: 6rem;
@@ -415,7 +540,7 @@ h1 {
 
 .faq {
 	background-color: transparent;
-	border: 1px solid #9fa4a8;
+	border: 1px solid var(--clr-rich-gray);
 	border-radius: 10px;
 	margin: 20px 0;
 	padding: 30px;
@@ -425,7 +550,7 @@ h1 {
 }
 
 .faq.active {
-	background-color: #fff;
+	background-color: var(--clr-white);
 	box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1), 0 3px 6px rgba(0, 0, 0, 0.1);
 }
 
@@ -476,7 +601,7 @@ h1 {
 }
 
 .faq.active .faq-toggle .fa-times {
-	color: #fff;
+	color: var(--clr-white);
 	display: block;
 }
 
@@ -485,7 +610,7 @@ h1 {
 }
 
 .faq.active .faq-toggle {
-	background-color: #9fa4a8;
+	background-color: var(--clr-rich-gray);
 }
 
 .featured p {
