--- a/style.css
+++ b/style.css
@@ -84,6 +84,7 @@ body {
 img,
 picture {
 	max-width: 100%;
+	height: auto;
 	display: block;
 }
 
@@ -141,7 +142,6 @@ h8 {
 
 .flex {
 	display: flex;
-	gap: var(--gap, 1rem);
 }
 
 .grid {
@@ -347,19 +347,13 @@ a:hover {
 /* Hero section */
 .carousel {
 	position: relative;
-	width: 100%;
+	max-width: 100%;
 	overflow: hidden;
-	margin: 0;
 }
 
-.carousel-inner .item {
+.carousel-inner {
 	display: flex;
-	transition: transform 0.5s ease-in-out;
-
-	background-position: center center;
-	background-repeat: no-repeat;
-	background-size: cover;
-	overflow: hidden;
+	transition: transform 0.5s ease-in;
 }
 
 .carousel-inner .item1 {
@@ -368,20 +362,61 @@ a:hover {
 
 .carousel-inner .item2 {
 	background-image: url(images/banner-02.jpg);
-	transform: translateX(-20px);
 }
 
 .carousel-inner .item3 {
 	background-image: url(images/banner-03.jpg);
-	transform: translateX(-30px);
 }
 
 .carousel-item {
 	flex: 0 0 100%;
 	max-width: 100%;
-	height: 90vh;
+	height: 100vh;
 	position: relative;
-	margin: 0;
+
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	overflow: hidden;
+}
+
+.carousel-item-overlay {
+	font-family: sans-serif;
+	position: absolute;
+	top: 10%;
+	left: 20%;
+	color: var(--clr-white);
+	text-align: left;
+	padding-top: 1rem;
+	padding-right: 20%;
+}
+
+.carousel-item-overlay span {
+	background-color: #fff;
+	color: black;
+	font-size: 1em;
+	font-weight: 500;
+	text-transform: capitalize;
+	padding: 0.5rem 0.938rem;
+	display: inline-block;
+	margin-bottom: 0.75em;
+	margin-top: 1em;
+}
+
+.carousel-item-overlay span em {
+	font-style: normal;
+	color: orange;
+}
+
+.carousel-item-overlay h1 {
+	font-size: 2.95rem;
+	font-weight: 700;
+	text-transform: uppercase;
+	color: var(--clr-white);
+	line-height: 62px;
+	width: 90%;
+	margin-bottom: 0px;
+	padding: 0.375rem 0;
 }
 
 .carousel-control-prev,
@@ -445,44 +480,6 @@ a:hover {
 
 .carousel-indicators button.active {
 	background-color: orange;
-}
-
-.carousel-item-overlay {
-	font-family: sans-serif;
-	position: absolute;
-	top: 10%;
-	left: 20%;
-	color: var(--clr-white);
-	text-align: left;
-	padding-right: 20%;
-}
-
-.carousel-item-overlay span {
-	background-color: #fff;
-	color: black;
-	font-size: 1em;
-	font-weight: 500;
-	text-transform: capitalize;
-	padding: 0.375rem 0.938rem;
-	display: inline-block;
-	margin-bottom: 0.75em;
-	margin-top: 1em;
-}
-
-.carousel-item-overlay span em {
-	font-style: normal;
-	color: orange;
-}
-
-.carousel-item-overlay h1 {
-	font-size: var(--fs-800);
-	font-weight: 700;
-	text-transform: uppercase;
-	color: var(--clr-white);
-	line-height: 62px;
-	width: 70%;
-	margin-bottom: 0px;
-	padding: 0.375rem 0;
 }
 
 /* Featured section */
@@ -1132,6 +1129,10 @@ fieldset {
 		margin-left: 1rem;
 	}
 
+	.carousel-item-overlay h1 {
+		font-size: var(--fs-800);
+		width: 70%;
+	}
 	/* Feature section */
 	aside {
 		justify-content: center;
